--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     "autoload": {
         "psr-4": {"App\\Wcs\\": "src/Wcs"}
     },
-    "require": {}
+    "require": {
+        "swiftmailer/swiftmailer": "^6.2",
+        "ehime/hello-world": "^1.0"
+    }
 }
